# platform

./: CMakeLists.txt  README.md
cmake/: platform-cmake.in  platform-config.cmake.in
example/: main.cpp
include/platform/: platform.hpp
src/: platform.cpp
